--- a/src/pages/table/Table.css
+++ b/src/pages/table/Table.css
@@ -7,6 +7,8 @@ body {
   margin: 150px;
   margin-top: 30px;
   margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
 }
 
 .container {
